Add task description to appendix

--- a/tex/appendices/appendices.tex
+++ b/tex/appendices/appendices.tex
@@ -2,7 +2,6 @@
 
 \chapter*{Appendices}
 \label{cha:appendices}
-
 \addcontentsline{toc}{chapter}{Appendices}
 
 \begin{comment}
@@ -16,3 +15,6 @@ Appendix one text goes here.
 
 Appendix two text goes here.
 \end{comment}
+
+\includeappendixpdfwithtitle{Task Description from Norkart}{appendices/project_description.pdf}
+% \includeappendixpdf{2}{appendices/project_description.pdf}
