--- a/tex/bib/bibliography.bib
+++ b/tex/bib/bibliography.bib
@@ -361,6 +361,16 @@
   file = {C:\Users\oskar\Zotero\storage\SQ4W6NP2\Mardal et al. - Nasjonal strategi for videreutvikling av SOSI.pdf}
 }
 
+@misc{martineauWhatRetrievalaugmentedGeneration2023,
+  title = {What Is Retrieval-Augmented Generation?},
+  author = {Martineau, Kim},
+  year = {2023},
+  month = aug,
+  url = {https://research.ibm.com/blog/retrieval-augmented-generation-RAG},
+  urldate = {2023-10-06},
+  file = {C:\Users\oskar\Zotero\storage\4IXQ75XY\retrieval-augmented-generation-RAG.html}
+}
+
 @incollection{masoGeospatialWebServices2022,
   title = {Geospatial {{Web Services}}},
   booktitle = {Springer {{Handbook}} of {{Geographic Information}}},
@@ -847,13 +857,6 @@
   archiveprefix = {arxiv},
   keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language},
   file = {C\:\\Users\\oskar\\Zotero\\storage\\QCTINMPS\\Wang et al. - 2023 - Self-Instruct Aligning Language Models with Self-.pdf;C\:\\Users\\oskar\\Zotero\\storage\\MEYXTC8V\\2212.html}
-}
-
-@misc{WhatRetrievalaugmentedGeneration,
-  title = {What Is Retrieval-Augmented Generation? | {{IBM Research Blog}}},
-  url = {https://research.ibm.com/blog/retrieval-augmented-generation-RAG},
-  urldate = {2023-10-06},
-  file = {C:\Users\oskar\Zotero\storage\4IXQ75XY\retrieval-augmented-generation-RAG.html}
 }
 
 @misc{whitePromptPatternCatalog2023,
