--- a/tex/frontmatter/glossary.tex
+++ b/tex/frontmatter/glossary.tex
@@ -1,27 +1,30 @@
-% \newglossaryentry{apig}{
-%     name={API},
-%     description={
-%             An Application Programming Interface (API) is a particular set of functions and procedures that a software program can utilize to access features or data of another software program}
-% }
-% \newglossaryentry{api}{
-%     type=\acronymtype,
-%     name={API},
-%     description={Application Programming Interface},
-%     first={Application Programming Interface (API)\glsadd{apig}}
-% }
+\begin{comment}
+\newglossaryentry{apig}{
+    name={API},
+    description={
+            An Application Programming Interface (API) is a particular set of functions and procedures that a software program can utilize to access features or data of another software program}
+}
+\newglossaryentry{api}{
+    type=\acronymtype,
+    name={API},
+    description={Application Programming Interface},
+    first={Application Programming Interface (API)\glsadd{apig}}
+}
 
-% \newglossaryentry{bertg}{
-%     name={BERT},
-%     description={
-%             Bidirectional Encoder Representations from Transformers (BERT) is a language model developed by Google AI Language that is trained on a large amount of plain text from Wikipedia and BookCorpus}
-% }
-% \newglossaryentry{bert}{
-%     type=\acronymtype,
-%     name={BERT},
-%     description={Bidirectional Encoder Representations from Transformers},
-%     first={Bidirectional Encoder Representations from Transformers\glsadd{bertg}}
-% }
+\newglossaryentry{bertg}{
+    name={BERT},
+    description={
+            Bidirectional Encoder Representations from Transformers (BERT) is a language model developed by Google AI Language that is trained on a large amount of plain text from Wikipedia and BookCorpus}
+}
+\newglossaryentry{bert}{
+    type=\acronymtype,
+    name={BERT},
+    description={Bidirectional Encoder Representations from Transformers},
+    first={Bidirectional Encoder Representations from Transformers\glsadd{bertg}}
+}
+\end{comment}
 
+\newacronym{acr:ai}{AI}{Artificial Intelligence}
 \newacronym{acr:llm}{LLM}{Large Language Model}
 \newacronym{acr:nlp}{NLP}{Natural Language Processing}
 \newacronym{acr:aws}{AWS}{Amazon Web Services}
@@ -42,4 +45,5 @@
 \newacronym{acr:wms}{WMS}{Web Map Service}
 \newacronym{acr:wfs}{WFS}{Web Feature Service}
 \newacronym{acr:gdal}{GDAL}{Geospatial Data Abstraction Library}
+\newacronym{acr:rag}{RAG}{Retrieval Augmented Generation}
 
