Add search result table (mock data and bad styling)

--- a/tex/frontmatter/glossary.tex
+++ b/tex/frontmatter/glossary.tex
@@ -46,4 +46,5 @@
 \newacronym{acr:wfs}{WFS}{Web Feature Service}
 \newacronym{acr:gdal}{GDAL}{Geospatial Data Abstraction Library}
 \newacronym{acr:rag}{RAG}{Retrieval Augmented Generation}
+\newacronym{acr:sql}{SQL}{Structured Query Language}
 
