--- a/tex/main.tex
+++ b/tex/main.tex
@@ -37,6 +37,10 @@
 \usepackage{hhline}
 \usepackage{subcaption}
 \usepackage[shortlabels]{enumitem}
+\usepackage{datatool}
+
+\DTLloaddb{literature_study}{../documents/literature_study.csv}
+
 
 % pdf stuff
 \usepackage{pdfpages}
@@ -61,6 +65,26 @@
 \usepackage{hyperref}
 \definecolor{darkblue}{rgb}{0, 0, 0.5}
 \hypersetup{colorlinks=true,citecolor=darkblue, linkcolor=darkblue, urlcolor=darkblue}
+\usepackage{cleveref}
+
+% Code stuff
+\usepackage{listings}
+
+\definecolor{dkgreen}{rgb}{0,0.6,0}
+\definecolor{gray}{rgb}{0.5,0.5,0.5}
+\definecolor{mauve}{rgb}{0.58,0,0.82}
+
+\lstdefinestyle{yaml}{
+    frame=tb,
+    basicstyle=\color{darkblue}\footnotesize,
+    rulecolor=\color{black},
+    string=[s]{'}{'},
+    stringstyle=\color{darkblue},
+    comment=[l]{:},
+    commentstyle=\color{black},
+    morecomment=[l]{-},
+    columns=flexible
+}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % comments and notes, useful while working on a draft - change the option 'draft' to 'disable' in the final version
@@ -147,6 +171,7 @@
   }
 
 % Styling 
+\usepackage{setspace}
 \usepackage{etoolbox}
 \AtBeginEnvironment{quote}{\par\singlespacing\small}
 
