--- a/tex/bib/bibliography.bib
+++ b/tex/bib/bibliography.bib
@@ -270,6 +270,18 @@
   file = {C\:\\Users\\oskar\\Zotero\\storage\\6APDTJLW\\_.pdf;C\:\\Users\\oskar\\Zotero\\storage\\6PE8F7YX\\en_nasjonal_geodatastrategi.pdf}
 }
 
+@misc{kumarWhatArePeople2023a,
+  title = {What Are People Asking to {{ChatGPT}}?},
+  author = {Kumar, Varun},
+  year = {2023},
+  month = may,
+  journal = {Medium},
+  url = {https://varunon9.medium.com/what-are-people-asking-to-chatgpt-f5f324a6cc27},
+  urldate = {2023-10-25},
+  abstract = {What's hot these days? ``Spam calls'' on WhatsApp? Crisis in Pakistan? Election in Karnataka?},
+  langid = {english}
+}
+
 @misc{liAutonomousGISNextgeneration2023,
   title = {Autonomous {{GIS}}: The next-Generation {{AI-powered GIS}}},
   shorttitle = {Autonomous {{GIS}}},
@@ -504,6 +516,16 @@
   file = {C\:\\Users\\oskar\\Zotero\\storage\\U4ISGUBN\\OpenAI - 2023 - GPT-4 Technical Report.pdf;C\:\\Users\\oskar\\Zotero\\storage\\ANYBWPS8\\2303.html}
 }
 
+@misc{openaiIntroducingChatGPT,
+  title = {Introducing {{ChatGPT}}},
+  author = {{OpenAI}},
+  url = {https://openai.com/blog/chatgpt},
+  urldate = {2023-10-26},
+  abstract = {We've trained a model called ChatGPT which interacts in a conversational way. The dialogue format makes it possible for ChatGPT to answer followup questions, admit its mistakes, challenge incorrect premises, and reject inappropriate requests.},
+  langid = {american},
+  file = {C:\Users\oskar\Zotero\storage\BXCIMZNC\chatgpt.html}
+}
+
 @misc{ouyangTrainingLanguageModels2022,
   title = {Training Language Models to Follow Instructions with Human Feedback},
   author = {Ouyang, Long and Wu, Jeff and Jiang, Xu and Almeida, Diogo and Wainwright, Carroll L. and Mishkin, Pamela and Zhang, Chong and Agarwal, Sandhini and Slama, Katarina and Ray, Alex and Schulman, John and Hilton, Jacob and Kelton, Fraser and Miller, Luke and Simens, Maddie and Askell, Amanda and Welinder, Peter and Christiano, Paul and Leike, Jan and Lowe, Ryan},
@@ -694,6 +716,23 @@
   abstract = {Current approaches to building general-purpose AI systems tend to produce systems with both beneficial and harmful capabilities. Further progress in AI development could lead to capabilities that pose extreme risks, such as offensive cyber capabilities or strong manipulation skills. We explain why model evaluation is critical for addressing extreme risks. Developers must be able to identify dangerous capabilities (through "dangerous capability evaluations") and the propensity of models to apply their capabilities for harm (through "alignment evaluations"). These evaluations will become critical for keeping policymakers and other stakeholders informed, and for making responsible decisions about model training, deployment, and security.},
   langid = {english},
   file = {C:\Users\oskar\Zotero\storage\29PNLI8M\Shevlane et al. - 2023 - Model evaluation for extreme risks.pdf}
+}
+
+@misc{skjuveWhyPeopleUse2023,
+  type = {{{SSRN Scholarly Paper}}},
+  title = {Why {{People Use ChatGPT}}},
+  author = {Skjuve, Marita and Bae Brandtzaeg, Petter and F{\o}lstad, Asbj{\o}rn},
+  year = {2023},
+  month = mar,
+  number = {4376834},
+  address = {{Rochester, NY}},
+  doi = {10.2139/ssrn.4376834},
+  url = {https://papers.ssrn.com/abstract=4376834},
+  urldate = {2023-10-25},
+  abstract = {ChatGPT, a general-purpose conversational artificial intelligence (AI), has attracted substantial attention since its launch in November 2022. The advent of this technology showcases AI's vast potential for generating and processing text and raises compelling questions regarding its potential usages. To obtain the requisite knowledge of users' motivations in adopting ChatGPT, we conducted a survey among ChatGPT users (N = 197) and analyzed the findings within the uses and gratifications (U\&G) theoretical framework. We identified six primary motivations for using ChatGPT: productivity, novelty, creative work, learning and development, entertainment, and social interaction and support. Our findings demonstrate that a general-purpose conversational AI such as ChatGPT have the potential to impact multiple aspects of human life, from enhancing work efficiency to shaping communication between individuals. We consider the possible consequences of such diverse user motivations and highlight potential avenues for further research.},
+  langid = {english},
+  keywords = {ChatGPT,Conversational AI,Large Language Models,Motivations,Uses and Gratifications},
+  file = {C:\Users\oskar\Zotero\storage\6CBMX6DH\Skjuve et al. - 2023 - Why People Use ChatGPT.pdf}
 }
 
 @article{sparrowKillerRobots2007,
