--- a/tex/frontmatter/glossary.tex
+++ b/tex/frontmatter/glossary.tex
@@ -47,4 +47,6 @@
 \newacronym{acr:gdal}{GDAL}{Geospatial Data Abstraction Library}
 \newacronym{acr:rag}{RAG}{Retrieval Augmented Generation}
 \newacronym{acr:sql}{SQL}{Structured Query Language}
+\newacronym{acr:sdk}{SDK}{Software Development Kit}
+\newacronym{acr:eu}{EU}{European Union}
 
