--- a/tex/main.tex
+++ b/tex/main.tex
@@ -65,7 +65,7 @@
 \usepackage{hyperref}
 \definecolor{darkblue}{rgb}{0, 0, 0.5}
 \hypersetup{colorlinks=true,citecolor=darkblue, linkcolor=darkblue, urlcolor=darkblue}
-\usepackage{cleveref}
+\usepackage[nameinlink]{cleveref}
 
 % Code stuff
 \usepackage{listings}
@@ -163,9 +163,9 @@
 %     \includepdf[pages=#1, scale=.7, pagecommand={\chapter{#1}\label{pdf:myfile}}, linktodoc=true]{#2}  
 % }
 
-\newcommand{\includeappendixpdfwithtitle}[2]{
+\newcommand{\includeappendixpdfwithtitle}[3]{
     \newgeometry{top=.5in}
-    \includepdf[pages=1, scale=.7, pagecommand={\chapter{#1}\label{pdf:myfile}}, linktodoc=true]{#2}
+    \includepdf[pages=1, scale=.7, pagecommand={\chapter{#1}\label{#3}}, linktodoc=true]{#2}
     \restoregeometry
     \includepdf[pages=2-, scale=.7, pagecommand={}, linktodoc=true]{#2}
   }
@@ -174,6 +174,8 @@
 \usepackage{setspace}
 \usepackage{etoolbox}
 \AtBeginEnvironment{quote}{\par\singlespacing\small}
+
+\newcolumntype{B}{>{\bfseries}c}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Acronym stuff
