Fix Bibliography hyperlink and begin writing experimental plan

--- a/tex/bib/bibliography.bib
+++ b/tex/bib/bibliography.bib
@@ -1,3 +1,16 @@
+@misc{bastianLargeLanguageModels2023,
+  title = {Large Language Models Are Powerful Imitators, but Not Innovators},
+  author = {Bastian, Matthias},
+  year = {2023},
+  month = oct,
+  journal = {THE DECODER},
+  url = {https://the-decoder.com/large-language-models-are-powerful-imitators-but-not-innovators/},
+  urldate = {2023-10-30},
+  abstract = {According to a psychological study, large AI models such as OpenAI's ChatGPT are strong imitators that mimic human content but are not innovative.},
+  langid = {american},
+  file = {C:\Users\oskar\Zotero\storage\KXKCWKT9\large-language-models-are-powerful-imitators-but-not-innovators.html}
+}
+
 @article{blancOGCAPIState,
   title = {{{OGC API}} State of Play: A Practical Testbed for the National Spatial Data Infrastructure in {{Switzerland}}},
   shorttitle = {{{OGC API}} State of Play},
@@ -35,6 +48,24 @@
   urldate = {2023-10-05},
   abstract = {⚡ Building applications with LLMs through composability ⚡},
   copyright = {MIT}
+}
+
+@misc{chenEvaluatingLargeLanguage2021,
+  title = {Evaluating {{Large Language Models Trained}} on {{Code}}},
+  author = {Chen, Mark and Tworek, Jerry and Jun, Heewoo and Yuan, Qiming and Pinto, Henrique Ponde de Oliveira and Kaplan, Jared and Edwards, Harri and Burda, Yuri and Joseph, Nicholas and Brockman, Greg and Ray, Alex and Puri, Raul and Krueger, Gretchen and Petrov, Michael and Khlaaf, Heidy and Sastry, Girish and Mishkin, Pamela and Chan, Brooke and Gray, Scott and Ryder, Nick and Pavlov, Mikhail and Power, Alethea and Kaiser, Lukasz and Bavarian, Mohammad and Winter, Clemens and Tillet, Philippe and Such, Felipe Petroski and Cummings, Dave and Plappert, Matthias and Chantzis, Fotios and Barnes, Elizabeth and {Herbert-Voss}, Ariel and Guss, William Hebgen and Nichol, Alex and Paino, Alex and Tezak, Nikolas and Tang, Jie and Babuschkin, Igor and Balaji, Suchir and Jain, Shantanu and Saunders, William and Hesse, Christopher and Carr, Andrew N. and Leike, Jan and Achiam, Josh and Misra, Vedant and Morikawa, Evan and Radford, Alec and Knight, Matthew and Brundage, Miles and Murati, Mira and Mayer, Katie and Welinder, Peter and McGrew, Bob and Amodei, Dario and McCandlish, Sam and Sutskever, Ilya and Zaremba, Wojciech},
+  year = {2021},
+  month = jul,
+  number = {arXiv:2107.03374},
+  eprint = {2107.03374},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2107.03374},
+  url = {http://arxiv.org/abs/2107.03374},
+  urldate = {2023-10-30},
+  abstract = {We introduce Codex, a GPT language model fine-tuned on publicly available code from GitHub, and study its Python code-writing capabilities. A distinct production version of Codex powers GitHub Copilot. On HumanEval, a new evaluation set we release to measure functional correctness for synthesizing programs from docstrings, our model solves 28.8\% of the problems, while GPT-3 solves 0\% and GPT-J solves 11.4\%. Furthermore, we find that repeated sampling from the model is a surprisingly effective strategy for producing working solutions to difficult prompts. Using this method, we solve 70.2\% of our problems with 100 samples per problem. Careful investigation of our model reveals its limitations, including difficulty with docstrings describing long chains of operations and with binding operations to variables. Finally, we discuss the potential broader impacts of deploying powerful code generation technologies, covering safety, security, and economics.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Machine Learning},
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\JGC3GF77\\Chen et al. - 2021 - Evaluating Large Language Models Trained on Code.pdf;C\:\\Users\\oskar\\Zotero\\storage\\LRYWFJMQ\\2107.html}
 }
 
 @article{coetzeeOpenGeospatialSoftware2020,
@@ -177,6 +208,24 @@
   file = {C\:\\Users\\oskar\\Zotero\\storage\\WRAWFM5K\\2023 - Håndbok for Geovekst-samarbeidet.pdf;C\:\\Users\\oskar\\Zotero\\storage\\FMVCCWW3\\veiledningsmateriell-geovekst.html}
 }
 
+@misc{hendrycksMeasuringMassiveMultitask2021,
+  title = {Measuring {{Massive Multitask Language Understanding}}},
+  author = {Hendrycks, Dan and Burns, Collin and Basart, Steven and Zou, Andy and Mazeika, Mantas and Song, Dawn and Steinhardt, Jacob},
+  year = {2021},
+  month = jan,
+  number = {arXiv:2009.03300},
+  eprint = {2009.03300},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2009.03300},
+  url = {http://arxiv.org/abs/2009.03300},
+  urldate = {2023-10-30},
+  abstract = {We propose a new test to measure a text model's multitask accuracy. The test covers 57 tasks including elementary mathematics, US history, computer science, law, and more. To attain high accuracy on this test, models must possess extensive world knowledge and problem solving ability. We find that while most recent models have near random-chance accuracy, the very largest GPT-3 model improves over random chance by almost 20 percentage points on average. However, on every one of the 57 tasks, the best models still need substantial improvements before they can reach expert-level accuracy. Models also have lopsided performance and frequently do not know when they are wrong. Worse, they still have near-random accuracy on some socially important subjects such as morality and law. By comprehensively evaluating the breadth and depth of a model's academic and professional understanding, our test can be used to analyze models across many tasks and to identify important shortcomings.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Computers and Society,Computer Science - Machine Learning},
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\4AN4PUCX\\Hendrycks et al. - 2021 - Measuring Massive Multitask Language Understanding.pdf;C\:\\Users\\oskar\\Zotero\\storage\\SSIQIZYR\\2009.html}
+}
+
 @misc{holmesSpatioTemporalAssetCatalogs2021,
   title = {{{SpatioTemporal Asset Catalogs}} and the {{Open Geospatial Consortium}}},
   author = {Holmes, Chris},
@@ -257,6 +306,18 @@
   file = {C\:\\Users\\oskar\\Zotero\\storage\\FBDIM7D6\\Hu et al. - 2021 - LoRA Low-Rank Adaptation of Large Language Models.pdf;C\:\\Users\\oskar\\Zotero\\storage\\HPY45HFE\\2106.html}
 }
 
+@misc{kearyBestOpenSourceLLMs2023,
+  title = {6 {{Best Open-Source LLMs}} to {{Watch Out For}} in 2024},
+  author = {Keary, Tim},
+  year = {2023},
+  month = oct,
+  journal = {Techopedia},
+  url = {https://www.techopedia.com/6-best-open-source-llms-to-watch-out-for-in-2024},
+  urldate = {2023-10-30},
+  abstract = {As the AI industry continues to advance, Techopedia looks at the top 6 open-source large language models (LMMs) to watch in 2024.},
+  langid = {american}
+}
+
 @techreport{kommunal-ogmoderniseringsdepartementetNationalGeospatialStrategy2018,
   type = {{Strategy}},
   title = {{National geospatial strategy toward 2025 - Everything happens somewhere}},
@@ -279,7 +340,8 @@
   url = {https://varunon9.medium.com/what-are-people-asking-to-chatgpt-f5f324a6cc27},
   urldate = {2023-10-25},
   abstract = {What's hot these days? ``Spam calls'' on WhatsApp? Crisis in Pakistan? Election in Karnataka?},
-  langid = {english}
+  langid = {english},
+  file = {C:\Users\oskar\Zotero\storage\I2LWCNWM\what-are-people-asking-to-chatgpt-f5f324a6cc27.html}
 }
 
 @misc{liAutonomousGISNextgeneration2023,
@@ -705,6 +767,24 @@
   file = {C\:\\Users\\oskar\\Zotero\\storage\\7DRKDHXI\\Roberts et al. - 2023 - GPT4GEO How a Language Model Sees the World's Geo.pdf;C\:\\Users\\oskar\\Zotero\\storage\\BHCR5VUS\\2306.html}
 }
 
+@misc{roziereCodeLlamaOpen2023,
+  title = {Code {{Llama}}: {{Open Foundation Models}} for {{Code}}},
+  shorttitle = {Code {{Llama}}},
+  author = {Rozi{\`e}re, Baptiste and Gehring, Jonas and Gloeckle, Fabian and Sootla, Sten and Gat, Itai and Tan, Xiaoqing Ellen and Adi, Yossi and Liu, Jingyu and Remez, Tal and Rapin, J{\'e}r{\'e}my and Kozhevnikov, Artyom and Evtimov, Ivan and Bitton, Joanna and Bhatt, Manish and Ferrer, Cristian Canton and Grattafiori, Aaron and Xiong, Wenhan and D{\'e}fossez, Alexandre and Copet, Jade and Azhar, Faisal and Touvron, Hugo and Martin, Louis and Usunier, Nicolas and Scialom, Thomas and Synnaeve, Gabriel},
+  year = {2023},
+  month = aug,
+  number = {arXiv:2308.12950},
+  eprint = {2308.12950},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  url = {http://arxiv.org/abs/2308.12950},
+  urldate = {2023-10-30},
+  abstract = {We release Code Llama, a family of large language models for code based on Llama 2 providing state-of-the-art performance among open models, infilling capabilities, support for large input contexts, and zero-shot instruction following ability for programming tasks. We provide multiple flavors to cover a wide range of applications: foundation models (Code Llama), Python specializations (Code Llama - Python), and instruction-following models (Code Llama - Instruct) with 7B, 13B and 34B parameters each. All models are trained on sequences of 16k tokens and show improvements on inputs with up to 100k tokens. 7B and 13B Code Llama and Code Llama - Instruct variants support infilling based on surrounding content. Code Llama reaches state-of-the-art performance among open models on several code benchmarks, with scores of up to 53\% and 55\% on HumanEval and MBPP, respectively. Notably, Code Llama - Python 7B outperforms Llama 2 70B on HumanEval and MBPP, and all our models outperform every other publicly available model on MultiPL-E. We release Code Llama under a permissive license that allows for both research and commercial use.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Computation and Language},
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\HG5BUPY7\\Rozière et al. - 2023 - Code Llama Open Foundation Models for Code.pdf;C\:\\Users\\oskar\\Zotero\\storage\\XF7M2VMP\\2308.html}
+}
+
 @misc{shevlaneModelEvaluationExtreme2023,
   title = {Model Evaluation for Extreme Risks},
   author = {Shevlane, Toby and Farquhar, Sebastian and Garfinkel, Ben and Phuong, Mary and Whittlestone, Jess and Leung, Jade and Kokotajlo, Daniel and Marchal, Nahema and Anderljung, Markus and Kolt, Noam and Ho, Lewis and Siddarth, Divya and Avin, Shahar and Hawkins, Will and Kim, Been and Gabriel, Iason and Bolina, Vijay and Clark, Jack and Bengio, Yoshua and Christiano, Paul and Dafoe, Allan},
@@ -987,6 +1067,24 @@
   file = {C\:\\Users\\oskar\\Zotero\\storage\\QQ336R5B\\Yao et al. - 2023 - ReAct Synergizing Reasoning and Acting in Languag.pdf;C\:\\Users\\oskar\\Zotero\\storage\\42JMXW48\\2210.html}
 }
 
+@article{yiuTransmissionTruthImitation2023,
+  title = {Transmission {{Versus Truth}}, {{Imitation Versus Innovation}}: {{What Children Can Do That Large Language}} and {{Language-and-Vision Models Cannot}} ({{Yet}})},
+  shorttitle = {Transmission {{Versus Truth}}, {{Imitation Versus Innovation}}},
+  author = {Yiu, Eunice and Kosoy, Eliza and Gopnik, Alison},
+  year = {2023},
+  month = oct,
+  journal = {Perspectives on Psychological Science},
+  pages = {17456916231201401},
+  publisher = {{SAGE Publications Inc}},
+  issn = {1745-6916},
+  doi = {10.1177/17456916231201401},
+  url = {https://doi.org/10.1177/17456916231201401},
+  urldate = {2023-10-30},
+  abstract = {Much discussion about large language models and language-and-vision models has focused on whether these models are intelligent agents. We present an alternative perspective. First, we argue that these artificial intelligence (AI) models are cultural technologies that enhance cultural transmission and are efficient and powerful imitation engines. Second, we explore what AI models can tell us about imitation and innovation by testing whether they can be used to discover new tools and novel causal structures and contrasting their responses with those of human children. Our work serves as a first step in determining which particular representations and competences, as well as which kinds of knowledge or skills, can be derived from particular learning techniques and data. In particular, we explore which kinds of cognitive capacities can be enabled by statistical analysis of large-scale linguistic data. Critically, our findings suggest that machines may need more than large-scale language and image data to allow the kinds of innovation that a small child can produce.},
+  langid = {english},
+  file = {C:\Users\oskar\Zotero\storage\E64YEMHK\Yiu et al. - 2023 - Transmission Versus Truth, Imitation Versus Innova.pdf}
+}
+
 @misc{yoranMakingRetrievalAugmentedLanguage2023,
   title = {Making {{Retrieval-Augmented Language Models Robust}} to {{Irrelevant Context}}},
   author = {Yoran, Ori and Wolfson, Tomer and Ram, Ori and Berant, Jonathan},
@@ -1039,6 +1137,23 @@
   abstract = {Efficient information search from building information models (BIMs) requires deep BIM knowledge or extensive engineering efforts for building natural language (NL)-based interfaces. To address this challenge, this paper introduces a dynamic prompt-based virtual assistant framework dubbed ``BIMS-GPT'' that integrates generative pre-trained transformer (GPT) technologies, supporting NL-based BIM search. To understand users' NL queries, extract relevant information from BIM databases, and deliver NL responses along with 3D visualizations, a dynamic prompt-based process was developed. In a case study, BIMS-GPT's functionality is demonstrated through a virtual assistant prototype for a hospital building. When evaluated with a BIM query dataset, the approach achieves accuracy rates of 99.5\% for classifying NL queries with incorporating 2\% of the data in prompts. This paper contributes to the advancement of effective and versatile virtual assistants for BIMs in the construction industry as it significantly enhances BIM accessibility while reducing the engineering and training data prerequisites for processing NL queries.},
   keywords = {Artificial intelligence,BIMS-GPT,Building information modeling,Generative pre-trained transformer,Information retrieval,Information search,Large language model,Natural language processing,Prompt engineering,Virtual assistant},
   file = {C\:\\Users\\oskar\\Zotero\\storage\\75F3SL4G\\Zheng and Fischer - 2023 - Dynamic prompt-based virtual assistant framework f.pdf;C\:\\Users\\oskar\\Zotero\\storage\\KVF8FKTL\\S0926580523003278.html;C\:\\Users\\oskar\\Zotero\\storage\\NE7D6R85\\display.html}
+}
+
+@misc{zhouLanguageAgentTree2023,
+  title = {Language {{Agent Tree Search Unifies Reasoning Acting}} and {{Planning}} in {{Language Models}}},
+  author = {Zhou, Andy and Yan, Kai and {Shlapentokh-Rothman}, Michal and Wang, Haohan and Wang, Yu-Xiong},
+  year = {2023},
+  month = oct,
+  number = {arXiv:2310.04406},
+  eprint = {2310.04406},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  url = {http://arxiv.org/abs/2310.04406},
+  urldate = {2023-10-30},
+  abstract = {While large language models (LLMs) have demonstrated impressive performance on a range of decision-making tasks, they rely on simple acting processes and fall short of broad deployment as autonomous agents. We introduce LATS (Language Agent Tree Search), a general framework that synergizes the capabilities of LLMs in planning, acting, and reasoning. Drawing inspiration from Monte Carlo tree search in model-based reinforcement learning, LATS employs LLMs as agents, value functions, and optimizers, repurposing their latent strengths for enhanced decision-making. What is crucial in this method is the use of an environment for external feedback, which offers a more deliberate and adaptive problem-solving mechanism that moves beyond the limitations of existing techniques. Our experimental evaluation across diverse domains, such as programming, HotPotQA, and WebShop, illustrates the applicability of LATS for both reasoning and acting. In particular, LATS achieves 94.4\textbackslash\% for programming on HumanEval with GPT-4 and an average score of 75.9 for web browsing on WebShop with GPT-3.5, demonstrating the effectiveness and generality of our method.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning},
+  file = {C\:\\Users\\oskar\\Zotero\\storage\\WFHLX8XB\\Zhou et al. - 2023 - Language Agent Tree Search Unifies Reasoning Actin.pdf;C\:\\Users\\oskar\\Zotero\\storage\\D6MBARZ8\\2310.html}
 }
 
 @article{zuoTopicModelingShort2023,
