--- a/tex/frontmatter/glossary.tex
+++ b/tex/frontmatter/glossary.tex
@@ -49,4 +49,5 @@
 \newacronym{acr:sql}{SQL}{Structured Query Language}
 \newacronym{acr:sdk}{SDK}{Software Development Kit}
 \newacronym{acr:eu}{EU}{European Union}
-
+\newacronym{acr:mmlu}{MMLU}{Multitask Language Understanding}
+\newacronym{acr:lats}{LATS}{Language Agent Tree Search}
