--- a/tex/main.tex
+++ b/tex/main.tex
@@ -283,9 +283,10 @@ acronym] 				% create a list of abbreviations
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\backmatter
 \clearpage
-
 \printglossary[type=\acronymtype]
 
+\clearpage
+\phantomsection
 \addcontentsline{toc}{chapter}{Bibliography}
 \printbibliography
 
