Add two GIB1 exams

--- a/tex/bib/bibliography.bib
+++ b/tex/bib/bibliography.bib
@@ -588,6 +588,27 @@
   file = {C:\Users\oskar\Zotero\storage\BXCIMZNC\chatgpt.html}
 }
 
+@article{oscoPotentialVisualChatGPT2023,
+  title = {The {{Potential}} of {{Visual ChatGPT}} for {{Remote Sensing}}},
+  author = {Osco, Lucas Prado and de Lemos, Eduardo Lopes and Gon{\c c}alves, Wesley Nunes and Ramos, Ana Paula Marques and Marcato Junior, Jos{\'e}},
+  year = {2023},
+  month = jan,
+  journal = {Remote Sensing},
+  volume = {15},
+  number = {13},
+  pages = {3232},
+  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  issn = {2072-4292},
+  doi = {10.3390/rs15133232},
+  url = {https://www.mdpi.com/2072-4292/15/13/3232},
+  urldate = {2023-10-30},
+  abstract = {Recent advancements in Natural Language Processing (NLP), particularly in Large Language Models (LLMs), associated with deep learning-based computer vision techniques, have shown substantial potential for automating a variety of tasks. These are known as Visual LLMs and one notable model is Visual ChatGPT, which combines ChatGPT's LLM capabilities with visual computation to enable effective image analysis. These models' abilities to process images based on textual inputs can revolutionize diverse fields, and while their application in the remote sensing domain remains unexplored, it is important to acknowledge that novel implementations are to be expected. Thus, this is the first paper to examine the potential of Visual ChatGPT, a cutting-edge LLM founded on the GPT architecture, to tackle the aspects of image processing related to the remote sensing domain. Among its current capabilities, Visual ChatGPT can generate textual descriptions of images, perform canny edge and straight line detection, and conduct image segmentation. These offer valuable insights into image content and facilitate the interpretation and extraction of information. By exploring the applicability of these techniques within publicly available datasets of satellite images, we demonstrate the current model's limitations in dealing with remote sensing images, highlighting its challenges and future prospects. Although still in early development, we believe that the combination of LLMs and visual models holds a significant potential to transform remote sensing image processing, creating accessible and practical application opportunities in the field.},
+  copyright = {http://creativecommons.org/licenses/by/3.0/},
+  langid = {english},
+  keywords = {artificial intelligence,image analysis,visual language model},
+  file = {C:\Users\oskar\Zotero\storage\TB43HJRE\Osco et al. - 2023 - The Potential of Visual ChatGPT for Remote Sensing.pdf}
+}
+
 @misc{ouyangTrainingLanguageModels2022,
   title = {Training Language Models to Follow Instructions with Human Feedback},
   author = {Ouyang, Long and Wu, Jeff and Jiang, Xu and Almeida, Diogo and Wainwright, Carroll L. and Mishkin, Pamela and Zhang, Chong and Agarwal, Sandhini and Slama, Katarina and Ray, Alex and Schulman, John and Hilton, Jacob and Kelton, Fraser and Miller, Luke and Simens, Maddie and Askell, Amanda and Welinder, Peter and Christiano, Paul and Leike, Jan and Lowe, Ryan},
