--- a/tex/main.tex
+++ b/tex/main.tex
@@ -157,7 +157,7 @@
 \newcommand{\Autosectionref}[1]{\hyperref[#1]{Section~\ref*{#1}}}
 \newcommand{\Autosubsectionref}[1]{\hyperref[#1]{Subsection~\ref*{#1}}}
 \newcommand{\Autosubsubsectionref}[1]{\hyperref[#1]{Subsubsection~\ref*{#1}}}
-\newcommand{\rqref}[1]{\hyperref[#1]{RQ~\ref*{#1}}}
+\newcommand{\rqref}[1]{\hyperref[#1]{RQ\ref*{#1}}}
 
 % \newcommand{\includeappendixpdf[2]{
 %     \includepdf[pages=#1, scale=.7, pagecommand={\chapter{#1}\label{pdf:myfile}}, linktodoc=true]{#2}  
